# K0rp_ware

./: .gitattributes  CHANGES.md  README.md  index.html  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  import-korp-os-progression-scheduled.yml  import-korp-os-progression.yml
design/: README.md  manifest.csv
design/atlases/: atlas.json
design/docs/: USAGE.md
design/qa/: report.json
desktop/bloom/: README.md
desktop/bloom-desktop/: index.html  package.json
desktop/click-audit/: README.md  index.html  package.json
desktop/click-audit/src-tauri/: Cargo.toml  tauri.conf.json
desktop/click-audit/src-tauri/capabilities/: default.json
desktop/click-audit/src-tauri/src/: api.rs  click_hook.rs  main.rs  state.rs
desktop/fidget/: index.html  package.json
desktop/status-game/: index.html  package.json
docks/k0rp-os/: 00-product-vision.md  01-visual-style.md  06-screen-concepts.md  07-roadmap.md  11-typography-and-brand.md  12-platform-workflow.md  README.md
docs/: v0.2-notes.md
docs/design/: k0rp-ware-asset-map-v0.1.md  k0rp-ware-ui-system-v0.1.md
docs/k0rp-os/: 00-product-vision.md  01-visual-style.md  02-product-modes.md  03-architecture.md  04-event-model.md  05-privacy-model.md  07-roadmap.md  (+19 more)
scripts/: build-k0rp-icons.mjs  build-korp-ui-runtime.mjs  korp-icon-contract.mjs  korp-ui-assets-contract.mjs  korp-ui-pack-v01-contract.mjs  sync-k0rp-ui.mjs  validate-korp-ui-assets.mjs  validate-korp-ui-pack-v01.mjs
src/: App.css  App.jsx  index.css  main.jsx  moduleRegistry.js  modules.css
(+179 files in other folders)
