[package]
name = "k0rp-click-audit"
version = "0.1.0"
description = "Local-only aggregate click counter for K0rp_ware"
authors = ["K0rp_ware"]
edition = "2021"

[lib]
name = "k0rp_click_audit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }
