[package]
name = "k0rp-click-audit"
version = "0.1.0"
description = "Local-only aggregate click counter for K0rp_ware"
authors = ["K0rp_ware"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"
